; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_diff/extr_diff_tree.c_default_file_added.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_diff/extr_diff_tree.c_default_file_added.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (i8*, i32*, i32*, i8*, %struct.TYPE_4__*, i32*)* }

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32*, i32*, i8*, i8*, i32*, i32*, i8*, %struct.TYPE_4__*, i32*)* @default_file_added to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @default_file_added(i8* %0, i32* %1, i32* %2, i8* %3, i8* %4, i32* %5, i32* %6, i8* %7, %struct.TYPE_4__* %8, i32* %9) #0 {
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i8*, align 8
  %19 = alloca %struct.TYPE_4__*, align 8
  %20 = alloca i32*, align 8
  store i8* %0, i8** %11, align 8
  store i32* %1, i32** %12, align 8
  store i32* %2, i32** %13, align 8
  store i8* %3, i8** %14, align 8
  store i8* %4, i8** %15, align 8
  store i32* %5, i32** %16, align 8
  store i32* %6, i32** %17, align 8
  store i8* %7, i8** %18, align 8
  store %struct.TYPE_4__* %8, %struct.TYPE_4__** %19, align 8
  store i32* %9, i32** %20, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %19, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load i32 (i8*, i32*, i32*, i8*, %struct.TYPE_4__*, i32*)*, i32 (i8*, i32*, i32*, i8*, %struct.TYPE_4__*, i32*)** %22, align 8
  %24 = load i8*, i8** %11, align 8
  %25 = load i32*, i32** %13, align 8
  %26 = load i8*, i8** %18, align 8
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %19, align 8
  %28 = load i32*, i32** %20, align 8
  %29 = call i32 %23(i8* %24, i32* null, i32* %25, i8* %26, %struct.TYPE_4__* %27, i32* %28)
  %30 = call i32 @SVN_ERR(i32 %29)
  %31 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %31
}

declare dso_local i32 @SVN_ERR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
